fix horizontal overflow

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .navbar {
-    overflow: hidden;
+    overflow-x: hidden;
     width: 100%;
 }
 .navbar-dark {
